Downgrade from Java 13 to java 8